SUSTech/CS323/project/test/test_1/test_GawCMerp.out
Error type B at Line 1: Missing closing parenthesis ')'
