SUSTech/CS323/project/test/test_1/test_GawCMerp.spl
int indent(int n {
    while(n > 0){
        n = n - 1;
    }
    return 0;
}